@@ -1,4 +1,4 @@
-# -*- coding: iso-8859-1 -*-
+# -*- coding: utf-8 -*-
 # Copyright 2004-2014 University of Oslo, Norway
 #
 # This file is part of Cerebrum.
@@ -16,11 +16,11 @@
 # You should have received a copy of the GNU General Public License
 # along with Cerebrum; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
-
+from __future__ import unicode_literals
 from Cerebrum.modules.PosixLDIF import PosixLDIF
 from Cerebrum.QuarantineHandler import QuarantineHandler
 from Cerebrum.modules import LDIFutils
-from Cerebrum.Utils import Factory, latin1_to_iso646_60, auto_super, make_timer
+from Cerebrum.Utils import Factory, auto_super, make_timer
 from Cerebrum.Utils import Factory
 
 class PosixLDIF_UiTMixin(PosixLDIF):
