@@ -1,3 +1,10 @@
+
+2018-10-21  kennethj <cerebrum@gagarin.uit.no>
+	* PosixLDIF.py: updated to handle UTF-8
+
+2018-10-21  kennethj <cerebrum@gagarin.uit.no>
+	* OrgLDIF.py: updated to handle UTF-8
+
 2018-10-21  kennethj <cerebrum@gagarin.uit.no>
 	* access_SYSX:	updated to handle unicode
 
